
Version 0.14 (TBA)
================================

 * Add a basic, context menu-based bundle and snippet editor to Snippet Browser (Delisa Mason)
 * OSX platform application bundle (Dan Lucraft)
 * The line number gutter is coloured like the current theme (Delisa Mason)

Version 0.13 (21st January 2012)
================================

 * Move all language settings options into the Edit menu, for easier discoverability.(Dan Lucraft)
 * Move the change tab language command into the Edit menu, and make it a filter list. (Dan Lucraft)
 * extended the FilterListDialog class to support icons, by merging in the outline_view plugin (Dan Lucraft)
 * implemented project-wide Find declaration (Project/Find declaration) (Dan Lucraft)
 * Don't use Bundler when running as a gem (Dan Lucraft)
 * Parse Ruby with 1.9 syntax instead of 1.8 (Dan Lucraft)
 * Made the auto indenter ignore blank lines when deciding on indentation. (Dan Lucraft)
 * New API for tab context menus (Dan Lucraft)
 * Copy path of file to clipboard tab context menu item (Dan Lucraft)
 * New APIs on Window to get and set window location, size and tree width (Dan Lucraft)
 * Remember project window location and size, and tree width between sessions (Markus Kahl)
 * Remember open files between sessions (Christopher Wade)
 * Remember cursor location and selection between sessions (Christopher Wade)
 * Remove broken remote project support, and clean up Project classes. (Dan Lucraft)

Version 0.12 (7th January 2012)
===============================

 * Features run all the way through again, and use Swtbot in places to 
   allow us to simulate events more accurately (Helpful for macros) (Dan Lucraft)
 * Added --no-splash option (Dan Lucraft)
 * Fix runnables for JRuby 1.6.1 (Chris Nelson)
 * Improved developer first experience (Dr Nic Williams)
 * Improved after install instruction language (Jeff Casimir)
 * Added forward char, backward char, and delete char commands (Dan Lucraft)