@@ -45,3 +45,5 @@ vendor/plugin_manager
 vendor/ruby-blockcache
 vendor/swt
 vendor/jruby-complete.jar
+vendor/redcar-xulrunner-win
+vendor/zip
